--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
